Fixed several layout issues caused by bootstrap 3.3.5 upgrade.

--- a/src/modules/components/prompt/details/prompt-details-style.scss
+++ b/src/modules/components/prompt/details/prompt-details-style.scss
@@ -1,5 +1,6 @@
 gelato-component[data-name="prompt-details"] {
 
+  font-family: $font-helv;
   position: relative;
 
   .detail-row {
